# HelloWorldApp

./: build.gradle  do
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/hello/: MainActivity.jav  MainActivity.java  MainActivity.java.save  MainActivity.java.save.1
app/src/main/java/com/example/helloworld/: LineView.java  MainActivity.jav  MainActivity.java
app/src/main/java/com/example/helloworld/hello/: MainActivity.java
app/src/main/res/drawable/: custom_cursor.xml  edittext_bg.xml  rounded_bg.xml  rounded_layer.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
